kubernetes/overlays/recette/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: request-limit@kubernetescrd
spec:
  rules:
    - host: users-rec.172.18.253.218.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-svc
                port:
                  number: 80

    - host: quotes-rec.172.18.253.218.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quotes-svc
                port:
                  number: 80

    - host: search-rec.172.18.253.218.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: search-svc
                port:
                  number: 80
